Fixed horizontal alignment of button features

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,5 +39,23 @@ footer {
 	padding-left: 5px;
 }
 
+/* Aligns feature buttons horizontally for medium screens */
+@media (min-width: 992px) {
+
+.btn-features {
+	position: absolute;
+    bottom:0;
+    right: 0;
+    left: 0;
+    width: 90%;
+}
+/* Increase height value to provide more content about features */
+.col-fixed-height {
+	position: relative;
+	height: 350px;
+	overflow: hidden;
+}
+
+}
 
 
